--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,4 @@
 #header{
-    background: #333333;
     color:#fff;
     padding-bottom: 10px;
     margin-bottom: 15px;
@@ -7,5 +6,6 @@
 }
 
 #header .create {
-    padding-top: 8px;
+    padding-top: 4px;
+    padding-bottom: 6px;
 }
