--- a/css/navbar.css
+++ b/css/navbar.css
@@ -160,12 +160,29 @@
   border-radius: 0;
   outline: 0;
   box-shadow: none;
-  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+  margin-top: 20px;
+  width: 250px;
+}
+
+.search-input::placeholder {
+  color: white;
+  opacity: 0.5;
+}
+
+.search-input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: white;
+  opacity: 0.5;
+}
+
+.search-input::-ms-input-placeholder { /* Microsoft Edge */
+  color: white;
+  opacity: 0.5;
 }
 
 .search-icon{
   border-bottom: 1px solid #fff !important;
   padding: 6px;
+  margin-top: 20px;
 }
 
 .collapsed-menu{
